--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+html {
+  /* background: url('./images/board2.jpeg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  width: 100%; */
+}
+
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: rgb(0, 0, 0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-container {
+  position: relative;
+  padding: 50px;
+  height: 100%;
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sticky-note-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 200px;
+}
+
+.note-textarea {
+  outline: none;
+  border: 0.5px solid lightgrey;
+  min-width: 100%;
+  max-width: 100%;
+  height: 100px;
+  padding: 15px;
+  font-family: sans-serif;
+}
+
+.btn-submit {
+  background-color: #fff27f;
+  padding: 15px;
+  width: 232px;
+  cursor: pointer;
+  padding: 10px;
+  border: 0;
+  outline: none;
+}
+
+.sticky-note {
+  position: absolute;
+  cursor: pointer;
+  background-image: url('./images/post-it.png');
+  background-size: cover;
+  top: 100px;
+  left: 300px;
+  height: 200px;
+  width: 200px;
+  padding: 20px;
+  margin: 5px;
+  /* display: inline-block; */
+  
+}
+
+.sticky-note-text {
+  padding-top: 25px;
+  height: 100%;
+  width: 100%;
+  white-space: pre-wrap;
+  overflow-y: scroll;
+
+}
+
+.sticky-delete {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  right: 18px;
+  transition: transform 0.3s ease;
+}
+
+.sticky-delete:hover {
+  transform: scale(1.6);
+}
+
+.btn-delete-all {
+  right: 125px;
+  top: 20px;
   color: white;
+  cursor: pointer;
+  position: absolute;
+  background-color: red;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-text {
+  color:white;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
